<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="rick_and_morty_fandom">Rick &amp; Morty Fandom</string>
    <string name="character_name">Character Name</string>
    <string name="image_character">image character</string>
    <string name="gender">Gender:</string>
    <string name="gender_">gender</string>
    <string name="status">Status:</string>
    <string name="status_">status</string>
    <string name="species">Species:</string>
    <string name="species_">species</string>
    <string name="type">Type:</string>
    <string name="type_">type</string>
    <string name="origin">Origin:</string>
    <string name="origin_">origin</string>
    <string name="back">back</string>
</resources>
