<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkViolin"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.aboutCharacter.DetailCharacterFragment">
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/back_icon"
        android:background="@color/violin"
        android:padding="13dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/back"
        ></ImageButton>
    <androidx.cardview.widget.CardView
        android:id="@+id/imgCharacterCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:cardCornerRadius="15dp"
        >
        <ImageView
            android:id="@+id/imgCharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_foreground"
            ></ImageView>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/txtGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imgCharacterCard"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:textSize="30sp">
    </TextView>

    <TextView
        android:id="@+id/txtGenderName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/txtGender"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imgCharacterCard"
        android:text="@string/gender_"
        android:textColor="@color/white"
        android:textSize="30sp">
    </TextView>
    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtGender"
        android:text="@string/status"
        android:textColor="@color/white"
        android:textSize="30sp">
    </TextView>
    <TextView
        android:id="@+id/txtStatusName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/txtStatus"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtGender"
        android:text="@string/status_"
        android:textColor="@color/white"
        android:textSize="30sp">
    </TextView>
    <TextView
        android:id="@+id/txtSpecies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtStatus"
        android:text="@string/species"
        android:textColor="@color/white"
        android:textSize="30sp">
    </TextView>
    <TextView
        android:id="@+id/txtSpeciesName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/txtSpecies"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtStatus"
        android:text="@string/species_"
        android:textColor="@color/white"
        android:textSize="30sp">
    </TextView>
    <TextView
        android:id="@+id/txtType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtSpecies"
        android:text="@string/type"
        android:textColor="@color/white"
        android:textSize="30sp">
    </TextView>
    <TextView
        android:id="@+id/txtTypeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/txtType"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtSpecies"
        android:text="@string/type_"
        android:textColor="@color/white"
        android:textSize="30sp">
    </TextView>
    <TextView
        android:id="@+id/txtOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtType"
        android:text="@string/origin"
        android:textColor="@color/white"
        android:textSize="30sp">
    </TextView>
    <TextView
        android:id="@+id/txtOriginName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/txtOrigin"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/txtType"
        android:text="@string/origin_"
        android:textColor="@color/white"
        android:textSize="30sp">
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>